[package]
name = "battleship-salvo-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full", "time"] }
rumqttc = "0.8.0"
futures = "0.3"
delegate = "0.5.2"
log = "0.4"
simple-log = "1.0.6"
regex = "1.5.4"
simplecrypt = "1.0.1"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
