[package]
name = "battleship-salvo-server"
version = "0.1.0"
authors = ["Ryan Meulenkamp <Ryan.Meulenkamp@Nedap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplecrypt = "1.0.1"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
rumqttc = "0.8.0"
log = "0.4"
simple-log = "1.0.6"
futures = "0.3"
tokio = { version = "1.7.1", features = ["full", "time"] }
strum = "0.21"
strum_macros = "0.21"
rand = "0.8.4"
delegate = "0.5.2"
regex = "1.5.4"
